applying the translations

--- a/webmonitor/locales/pt.json
+++ b/webmonitor/locales/pt.json
@@ -1,51 +1,66 @@
 {
-  "About": "About",
-  "Add Layers": "Add Layers",
-  "Add": "Add",
-  "Alert": "Alert",
-  "All Formats": "All Formats",
-  "Almost there! The file is being prepared for download<span>...</span>": "Almost there! The file is being prepared for download<span>...</span>",
-  "Analysis": "Analysis",
-  "Animation": "Animation",
-  "Attributes of layer: ": "Attributes of layer: ",
-  "Close": "Close",
+  "About": "Sobre",
+  "ABOUT-TEXT": "Este projeto é parte integrante do Programa Cerrado, uma iniciativa de cooperação entre os governos do Brasil e do Reino Unido, com apoio do Banco Mundial. O Ministério do Meio Ambiente (MMA), por meio de sua Secretaria de Mudanças Climáticas e Qualidade Ambiental (SMCQ), é o responsável pela coordenação geral do programa. O objetivo da iniciativa é contribuir para a mitigação da mudança do clima e para melhoria da gestão de recursos naturais no bioma Cerrado por meio do aprimoramento de políticas públicas e de práticas de produtores rurais.",
+  "Add Layers": "Adicionar Camadas",
+  "Add": "Adicionar",
+  "Alert": "Alerta",
+  "All Formats": "Todos os Formatos",
+  "Almost there! The file is being prepared for download<span>...</span>": "Quase lá! O arquivo está sendo preparado para o download<span>...</span>",
+  "Analysis": "Análise",
+  "Animation": "Animação",
+  "Animation controls": "Controles de animação",
+  "Attributes of layer: ": "Atributos da Camada: ",
+  "Close": "Fechar",
   "CSV": "CSV",
-  "Custom": "Custom",
-  "Days": "Days",
-  "Description": "Description",
-  "Dynamic Data": "Dynamic Data",
-  "Error to find capabilities.": "Error to find capabilities.",
-  "Export Data": "Export Data",
-  "Exportation": "Exportation",
-  "From:&nbsp": "From:&nbsp",
+  "Custom": "Personalizado",
+  "Days": "Dias",
+  "Description": "Descrição",
+  "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)": "Plataforma digital para monitoramento e alerta de fogo na vegetação no Cerrado brasileiro (Banco Mundial TF018566)",
+  "Dynamic Data": "Dados Dinâmicos",
+  "Error to find capabilities.": "Erro ao encontrar o capabilities.",
+  "Export Data": "Exportar Dados",
+  "Exportation": "Exportação",
+  "File not found.": "O arquivo não foi encontrado.",
+  "First": "Primeira",
+  "From:&nbsp": "De:&nbsp",
   "GeoJSON": "GeoJSON",
-  "Hours": "Hours",
-  "Invalid URL!": "Invalid URL!",
+  "Hours": "Horas",
+  "INPE PROJECT": "PROJETO INPE",
+  "Invalid URL!": "URL Inválida!",
   "KML": "KML",
-  "Layer Tools": "Layer Tools",
-  "Layers:": "Layers",
-  "Legends": "Legends",
-  "Load State": "Load State",
-  "Map Server is not responding": "Map Server is not responding",
-  "Minutes": "Minutes",
-  "No data to show.": "No data to show.",
-  "O arquivo não foi encontrado.": "O arquivo não foi encontrado.",
-  "Opacity": "Opacity",
-  "Period:&nbsp": "Period:&nbsp",
-  "Plataforma digital para monitoramento e alerta de fogo na vegeta&ccedil;&atilde;o no Cerrado brasileiro (Banco Mundial TF018566)": "Plataforma digital para monitoramento e alerta de fogo na vegeta&ccedil;&atilde;o no Cerrado brasileiro (Banco Mundial TF018566)",
-  "Please wait, the requested data is being exported<span>...</span>": "Please wait, the requested data is being exported<span>...</span>",
-  "Projeto <em>Platform of Monitoring and Warning of Forest Fires in the Cerrado</em> (ProCerrado INPE)": "Projeto <em>Platform of Monitoring and Warning of Forest Fires in the Cerrado</em> (ProCerrado INPE)",
-  "PROJETO INPE": "PROJETO INPE",
-  "REALIZAÇÃO": "REALIZAÇÃO",
-  "Restart": "Restart",
-  "Save changes": "Save changes",
-  "Save State": "Save State",
+  "Last": "&Uacute;ltima",
+  "Layer Tools": "Ferramentas da Camada",
+  "Layers:": "Camadas",
+  "Legends": "Legendas",
+  "Load State": "Carregar Estado",
+  "Loading...": "Carregando...",
+  "Map Server is not responding": "O servidor de mapas não está respondendo",
+  "Minutes": "Minutos",
+  "Next": "Próxima",
+  "No data available in table": "Nenhum registro a ser exibido",
+  "No data to show.": "Não existem dados para exibir.",
+  "No matching records found": "Nenhum registro encontrado",
+  "Opacity": "Opacidade",
+  "Password": "Senha",
+  "Period:&nbsp": "Período:&nbsp",
+  "Please wait, the requested data is being exported<span>...</span>": "Por favor aguarde, os dados requisitados estão sendo exportados<span>...</span>",
+  "Previous": "Anterior",
+  "Processing ...": "Processando...",
+  "Project <em>Platform of Monitoring and Warning of Forest Fires in the Cerrado</em> (ProCerrado INPE)": "Projeto <em>Platform of Monitoring and Warning of Forest Fires in the Cerrado</em> (ProCerrado INPE)",
+  "REALIZATION": "REALIZAÇÃO",
+  "Restart": "Reiniciar",
+  "Save changes": "Salvar alterações",
+  "Save State": "Salvar Estado",
+  "Search:": "Pesquisa:",
   "Shapefile": "Shapefile",
-  "Sign In": "Sign In",
-  "Sign out": "Sign out",
-  "Static Data": "Static Data",
-  "Template": "Template",
-  "To:&nbsp ": "To:&nbsp ",
-  "Verifying data for export<span>...</span>": "Verifying data for export<span>...</span>",
-  "VISIBLE LAYERS": "CAMADAS VISÍVEIS"
+  "Showing 0 to 0 of 0 entries": "Exibindo 0 até 0 de 0 registros",
+  "Sign In": "Entrar",
+  "Sign out": "Sair",
+  "Static Data": "Dados Estáticos",
+  "Template": "Plano de Fundo",
+  "To:&nbsp ": "Até:&nbsp ",
+  "Username": "Usuário",
+  "Verifying data for export<span>...</span>": "Verificando dados para exportação<span>...</span>",
+  "VISIBLE LAYERS": "CAMADAS VISÍVEIS",
+  "WMS URI": "WMS URI"
 }
