--- a/webmonitor/locales/es.json
+++ b/webmonitor/locales/es.json
@@ -1,3 +1,66 @@
 {
-  "VISIBLE LAYERS": ""
+  "About": "About",
+  "Add Layers": "Add Layers",
+  "Add": "Add",
+  "Alert": "Alert",
+  "All Formats": "All Formats",
+  "Almost there! The file is being prepared for download<span>...</span>": "Almost there! The file is being prepared for download<span>...</span>",
+  "Analysis": "Analysis",
+  "Animation": "Animation",
+  "Animation controls": "Animation controls",
+  "Attributes of layer: ": "Attributes of layer: ",
+  "Close": "Close",
+  "CSV": "CSV",
+  "Custom": "Custom",
+  "Days": "Days",
+  "Description": "Description",
+  "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)": "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)",
+  "Dynamic Data": "Dynamic Data",
+  "Error to find capabilities.": "Error to find capabilities.",
+  "Export Data": "Export Data",
+  "Exportation": "Exportation",
+  "File not found.": "File not found.",
+  "First": "First",
+  "From:&nbsp": "From:&nbsp",
+  "GeoJSON": "GeoJSON",
+  "Hours": "Hours",
+  "INPE PROJECT": "INPE PROJECT",
+  "Invalid URL!": "Invalid URL!",
+  "KML": "KML",
+  "Last": "Last",
+  "Layer Tools": "Layer Tools",
+  "Layers:": "Layers",
+  "Legends": "Legends",
+  "Load State": "Load State",
+  "Loading...": "Loading...",
+  "Map Server is not responding": "Map Server is not responding",
+  "Minutes": "Minutes",
+  "Next": "Next",
+  "No data available in table": "No data available in table",
+  "No data to show.": "No data to show.",
+  "No matching records found": "No matching records found",
+  "Opacity": "Opacity",
+  "Password": "Password",
+  "Period:&nbsp": "Period:&nbsp",
+  "Please wait, the requested data is being exported<span>...</span>": "Please wait, the requested data is being exported<span>...</span>",
+  "Previous": "Previous",
+  "Processing ...": "Processing ...",
+  "Project <em>Platform of Monitoring and Warning of Forest Fires in the Cerrado</em> (ProCerrado INPE)": "Project <em>Platform of Monitoring and Warning of Forest Fires in the Cerrado</em> (ProCerrado INPE)",
+  "REALIZATION": "REALIZATION",
+  "Restart": "Restart",
+  "Save changes": "Save changes",
+  "Save State": "Save State",
+  "Search:": "Search:",
+  "Shapefile": "Shapefile",
+  "Showing 0 to 0 of 0 entries": "Showing 0 to 0 of 0 entries",
+  "Sign In": "Sign In",
+  "Sign out": "Sign out",
+  "Static Data": "Static Data",
+  "Template": "Template",
+  "This project is part of the Programa Cerrado, an iniciative of cooperation between the British and Brazilian governments, with the support of the World Bank. The Brazilian Ministry of the Enviroment (MMA), through its Climate Change and Environmental Quality Secretariat (SMCQ), is the responsible for the general coordination of the program. The objective of the iniciative is to contribute for the mitigation of climate change and for the improvement of the management of natural resources in the Brazilian Cerrado, through enhancement of public politics and farmers practices.": "This project is part of the Programa Cerrado, an iniciative of cooperation between the British and Brazilian governments, with the support of the World Bank. The Brazilian Ministry of the Enviroment (MMA), through its Climate Change and Environmental Quality Secretariat (SMCQ), is the responsible for the general coordination of the program. The objective of the iniciative is to contribute for the mitigation of climate change and for the improvement of the management of natural resources in the Brazilian Cerrado, through enhancement of public politics and farmers practices.",
+  "To:&nbsp ": "To:&nbsp ",
+  "Username": "Username",
+  "Verifying data for export<span>...</span>": "Verifying data for export<span>...</span>",
+  "VISIBLE LAYERS": "VISIBLE LAYERS",
+  "WMS URI": "WMS URI"
 }
