--- a/webmonitor/locales/en.json
+++ b/webmonitor/locales/en.json
@@ -1,24 +1,25 @@
 {
   "About": "About",
+  "ABOUT-TEXT": "This project is part of the Programa Cerrado, an iniciative of cooperation between the British and Brazilian governments, with the support of the World Bank. The Brazilian Ministry of the Enviroment (MMA), through its Climate Change and Environmental Quality Secretariat (SMCQ), is the responsible for the general coordination of the program. The objective of the iniciative is to contribute for the mitigation of climate change and for the improvement of the management of natural resources in the Brazilian Cerrado, through enhancement of public politics and farmers practices.",
   "Add Layers": "Add Layers",
   "Add": "Add",
-  "Alert": "Alert",
+  "Alerts": "Alerts",
   "All Formats": "All Formats",
   "Almost there! The file is being prepared for download<span>...</span>": "Almost there! The file is being prepared for download<span>...</span>",
   "Analysis": "Analysis",
   "Animation": "Animation",
   "Animation controls": "Animation controls",
-  "Attributes of layer: ": "Attributes of layer: ",
+  "Attributes of layer": "Attributes of Layer: ",
   "Close": "Close",
   "CSV": "CSV",
-  "Custom": "Custom",
   "Days": "Days",
   "Description": "Description",
   "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)": "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)",
   "Dynamic Data": "Dynamic Data",
-  "Error to find capabilities.": "Error to find capabilities.",
+  "Error to find capabilities": "Error to find capabilities.",
   "Export Data": "Export Data",
   "Exportation": "Exportation",
+  "Externals": "Externals",
   "File not found.": "File not found.",
   "First": "First",
   "From:&nbsp": "From:&nbsp",
@@ -56,8 +57,7 @@
   "Sign In": "Sign In",
   "Sign out": "Sign out",
   "Static Data": "Static Data",
-  "Template": "Template",
-  "ABOUT-TEXT": "This project is part of the Programa Cerrado, an iniciative of cooperation between the British and Brazilian governments, with the support of the World Bank. The Brazilian Ministry of the Enviroment (MMA), through its Climate Change and Environmental Quality Secretariat (SMCQ), is the responsible for the general coordination of the program. The objective of the iniciative is to contribute for the mitigation of climate change and for the improvement of the management of natural resources in the Brazilian Cerrado, through enhancement of public politics and farmers practices.",
+  "Templates": "Templates",
   "To:&nbsp ": "To:&nbsp ",
   "Username": "Username",
   "Verifying data for export<span>...</span>": "Verifying data for export<span>...</span>",
