--- a/webmonitor/locales/pt.json
+++ b/webmonitor/locales/pt.json
@@ -3,23 +3,23 @@
   "ABOUT-TEXT": "Este projeto é parte integrante do Programa Cerrado, uma iniciativa de cooperação entre os governos do Brasil e do Reino Unido, com apoio do Banco Mundial. O Ministério do Meio Ambiente (MMA), por meio de sua Secretaria de Mudanças Climáticas e Qualidade Ambiental (SMCQ), é o responsável pela coordenação geral do programa. O objetivo da iniciativa é contribuir para a mitigação da mudança do clima e para melhoria da gestão de recursos naturais no bioma Cerrado por meio do aprimoramento de políticas públicas e de práticas de produtores rurais.",
   "Add Layers": "Adicionar Camadas",
   "Add": "Adicionar",
-  "Alert": "Alerta",
+  "Alerts": "Alertas",
   "All Formats": "Todos os Formatos",
   "Almost there! The file is being prepared for download<span>...</span>": "Quase lá! O arquivo está sendo preparado para o download<span>...</span>",
-  "Analysis": "Análise",
+  "Analysis": "Análises",
   "Animation": "Animação",
   "Animation controls": "Controles de animação",
-  "Attributes of layer: ": "Atributos da Camada: ",
+  "Attributes of layer": "Atributos da Camada: ",
   "Close": "Fechar",
   "CSV": "CSV",
-  "Custom": "Personalizado",
   "Days": "Dias",
   "Description": "Descrição",
   "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)": "Plataforma digital para monitoramento e alerta de fogo na vegetação no Cerrado brasileiro (Banco Mundial TF018566)",
   "Dynamic Data": "Dados Dinâmicos",
-  "Error to find capabilities.": "Erro ao encontrar o capabilities.",
+  "Error to find capabilities": "Erro ao encontrar o capabilities.",
   "Export Data": "Exportar Dados",
   "Exportation": "Exportação",
+  "Externals": "Externos",
   "File not found.": "O arquivo não foi encontrado.",
   "First": "Primeira",
   "From:&nbsp": "De:&nbsp",
@@ -57,7 +57,7 @@
   "Sign In": "Entrar",
   "Sign out": "Sair",
   "Static Data": "Dados Estáticos",
-  "Template": "Plano de Fundo",
+  "Templates": "Planos de Fundo",
   "To:&nbsp ": "Até:&nbsp ",
   "Username": "Usuário",
   "Verifying data for export<span>...</span>": "Verificando dados para exportação<span>...</span>",
