--- a/webmonitor/locales/pt.json
+++ b/webmonitor/locales/pt.json
@@ -1,4 +1,5 @@
 {
+  "0% Complete": "0% Completo",
   "About": "Sobre",
   "ABOUT-TEXT": "Este projeto é parte integrante do Programa Cerrado, uma iniciativa de cooperação entre os governos do Brasil e do Reino Unido, com apoio do Banco Mundial. O Ministério do Meio Ambiente (MMA), por meio de sua Secretaria de Mudanças Climáticas e Qualidade Ambiental (SMCQ), é o responsável pela coordenação geral do programa. O objetivo da iniciativa é contribuir para a mitigação da mudança do clima e para melhoria da gestão de recursos naturais no bioma Cerrado por meio do aprimoramento de políticas públicas e de práticas de produtores rurais.",
   "Add Layers": "Adicionar Camadas",
@@ -9,56 +10,60 @@
   "Analysis": "Análises",
   "Animation": "Animação",
   "Animation controls": "Controles de animação",
-  "Attributes of layer": "Atributos da Camada: ",
+  "ATTRIBUTES-OF-LAYER-COLON": "Atributos da Camada: ",
+  "CAPABILITIES-ERROR": "Erro ao encontrar o capabilities.",
   "Close": "Fechar",
+  "Complete": "Completo",
   "CSV": "CSV",
   "Days": "Dias",
   "Description": "Descrição",
   "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)": "Plataforma digital para monitoramento e alerta de fogo na vegetação no Cerrado brasileiro (Banco Mundial TF018566)",
   "Dynamic Data": "Dados Dinâmicos",
-  "Error to find capabilities": "Erro ao encontrar o capabilities.",
   "Export Data": "Exportar Dados",
   "Exportation": "Exportação",
   "Externals": "Externos",
-  "File not found.": "O arquivo não foi encontrado.",
+  "FILE-NOT-FOUND": "O arquivo não foi encontrado.",
   "First": "Primeira",
-  "From:&nbsp": "De:&nbsp",
+  "FROM-COLON": "De:",
   "GeoJSON": "GeoJSON",
   "Hours": "Horas",
+  "INCORRECT-PASSWORD": "Senha incorreta.",
+  "INCORRECT-USER": "Usuário incorreto.",
   "INPE PROJECT": "PROJETO INPE",
   "Invalid URL!": "URL Inválida!",
   "KML": "KML",
   "Last": "&Uacute;ltima",
   "Layer Tools": "Ferramentas da Camada",
-  "Layers:": "Camadas",
+  "LAYERS-COLON": "Camadas:",
   "Legends": "Legendas",
   "Load State": "Carregar Estado",
-  "Loading...": "Carregando...",
+  "LOADING": "Carregando...",
   "Map Server is not responding": "O servidor de mapas não está respondendo",
   "Minutes": "Minutos",
+  "Missing credentials": "Usuário e/ou senha não inseridos.",
   "Next": "Próxima",
   "No data available in table": "Nenhum registro a ser exibido",
-  "No data to show.": "Não existem dados para exibir.",
+  "NO-DATA": "Não existem dados para exibir.",
   "No matching records found": "Nenhum registro encontrado",
   "Opacity": "Opacidade",
   "Password": "Senha",
-  "Period:&nbsp": "Período:&nbsp",
+  "PERIOD-COLON": "Período:",
   "Please wait, the requested data is being exported<span>...</span>": "Por favor aguarde, os dados requisitados estão sendo exportados<span>...</span>",
   "Previous": "Anterior",
-  "Processing ...": "Processando...",
+  "PROCESSING": "Processando...",
   "Project <em>Platform of Monitoring and Warning of Forest Fires in the Cerrado</em> (ProCerrado INPE)": "Projeto <em>Platform of Monitoring and Warning of Forest Fires in the Cerrado</em> (ProCerrado INPE)",
   "REALIZATION": "REALIZAÇÃO",
   "Restart": "Reiniciar",
   "Save changes": "Salvar alterações",
   "Save State": "Salvar Estado",
-  "Search:": "Pesquisa:",
+  "SEARCH-COLON": "Pesquisa:",
   "Shapefile": "Shapefile",
   "Showing 0 to 0 of 0 entries": "Exibindo 0 até 0 de 0 registros",
   "Sign In": "Entrar",
   "Sign out": "Sair",
   "Static Data": "Dados Estáticos",
   "Templates": "Planos de Fundo",
-  "To:&nbsp ": "Até:&nbsp ",
+  "TO-COLON": "Até:",
   "Username": "Usuário",
   "Verifying data for export<span>...</span>": "Verificando dados para exportação<span>...</span>",
   "VISIBLE LAYERS": "CAMADAS VISÍVEIS",
