--- a/webmonitor/locales/pt.json
+++ b/webmonitor/locales/pt.json
@@ -1,4 +1,5 @@
 {
+  "(filtered from": "(filtrado de",
   "0% Complete": "0% Completo",
   "About": "Sobre",
   "ABOUT-TEXT": "Este projeto é parte integrante do Programa Cerrado, uma iniciativa de cooperação entre os governos do Brasil e do Reino Unido, com apoio do Banco Mundial. O Ministério do Meio Ambiente (MMA), por meio de sua Secretaria de Mudanças Climáticas e Qualidade Ambiental (SMCQ), é o responsável pela coordenação geral do programa. O objetivo da iniciativa é contribuir para a mitigação da mudança do clima e para melhoria da gestão de recursos naturais no bioma Cerrado por meio do aprimoramento de políticas públicas e de práticas de produtores rurais.",
@@ -19,6 +20,7 @@
   "Description": "Descrição",
   "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)": "Plataforma digital para monitoramento e alerta de fogo na vegetação no Cerrado brasileiro (Banco Mundial TF018566)",
   "Dynamic Data": "Dados Dinâmicos",
+  "entries": "registros",
   "Export Data": "Exportar Dados",
   "Exportation": "Exportação",
   "Externals": "Externos",
@@ -32,7 +34,7 @@
   "INPE PROJECT": "PROJETO INPE",
   "Invalid URL!": "URL Inválida!",
   "KML": "KML",
-  "Last": "&Uacute;ltima",
+  "Last": "Última",
   "Layer Tools": "Ferramentas da Camada",
   "LAYERS-COLON": "Camadas:",
   "Legends": "Legendas",
@@ -45,6 +47,7 @@
   "No data available in table": "Nenhum registro a ser exibido",
   "NO-DATA": "Não existem dados para exibir.",
   "No matching records found": "Nenhum registro encontrado",
+  "of": "de",
   "Opacity": "Opacidade",
   "Password": "Senha",
   "PERIOD-COLON": "Período:",
@@ -58,12 +61,16 @@
   "Save State": "Salvar Estado",
   "SEARCH-COLON": "Pesquisa:",
   "Shapefile": "Shapefile",
+  "Show": "Exibir",
+  "Showing": "Exibindo",
   "Showing 0 to 0 of 0 entries": "Exibindo 0 até 0 de 0 registros",
   "Sign In": "Entrar",
   "Sign out": "Sair",
   "Static Data": "Dados Estáticos",
   "Templates": "Planos de Fundo",
+  "to": "até",
   "TO-COLON": "Até:",
+  "total entries)": "registros)",
   "Username": "Usuário",
   "Verifying data for export<span>...</span>": "Verificando dados para exportação<span>...</span>",
   "VISIBLE LAYERS": "CAMADAS VISÍVEIS",
