--- a/webmonitor/locales/en.json
+++ b/webmonitor/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "(filtered from": "(filtered from",
   "0% Complete": "0% Complete",
   "About": "About",
   "ABOUT-TEXT": "This project is part of the Programa Cerrado, an iniciative of cooperation between the British and Brazilian governments, with the support of the World Bank. The Brazilian Ministry of the Enviroment (MMA), through its Climate Change and Environmental Quality Secretariat (SMCQ), is the responsible for the general coordination of the program. The objective of the iniciative is to contribute for the mitigation of climate change and for the improvement of the management of natural resources in the Brazilian Cerrado, through enhancement of public politics and farmers practices.",
@@ -19,6 +20,7 @@
   "Description": "Description",
   "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)": "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)",
   "Dynamic Data": "Dynamic Data",
+  "entries": "entries",
   "Export Data": "Export Data",
   "Exportation": "Exportation",
   "Externals": "Externals",
@@ -45,6 +47,7 @@
   "No data available in table": "No data available in table",
   "NO-DATA": "No data to show.",
   "No matching records found": "No matching records found",
+  "of": "of",
   "Opacity": "Opacity",
   "Password": "Password",
   "PERIOD-COLON": "Period:",
@@ -58,12 +61,16 @@
   "Save State": "Save State",
   "SEARCH-COLON": "Search:",
   "Shapefile": "Shapefile",
+  "Show": "Show",
+  "Showing": "Showing",
   "Showing 0 to 0 of 0 entries": "Showing 0 to 0 of 0 entries",
   "Sign In": "Sign In",
   "Sign out": "Sign out",
   "Static Data": "Static Data",
   "Templates": "Templates",
+  "to": "to",
   "TO-COLON": "To:",
+  "total entries)": "total entries)",
   "Username": "Username",
   "Verifying data for export<span>...</span>": "Verifying data for export<span>...</span>",
   "VISIBLE LAYERS": "VISIBLE LAYERS",
