--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -24,6 +24,7 @@
   "10": "10",
   "11": "11",
   "12": "12",
+  " Data Series": " Data Series",
   " deleted": " deleted",
   " projects has been imported": {
     " ": " projects has been imported. "
@@ -134,6 +135,18 @@
   "Bytes Before": "Bytes Before",
   "CSV Format": "CSV Format",
   "CTL File": "CTL File",
+  "Can not delete the alert if the service is not running": {
+    " ": "Can not delete the alert if the service is not running. "
+  },
+  "Can not delete the analysis if the service is not running": {
+    " ": "Can not delete the analysis if the service is not running. "
+  },
+  "Can not delete the data series if the service is not running": {
+    " ": "Can not delete the data series if the service is not running. "
+  },
+  "Can not delete the view if the service is not running": {
+    " ": "Can not delete the view if the service is not running. "
+  },
   "Cancel": "Cancel",
   "Cell phone": "Cell phone",
   "Cellphone": "Cellphone",
@@ -145,6 +158,7 @@
       }
     }
   },
+  "Choose data series": "Choose data series",
   "Close": "Close",
   "Code": "Code",
   "Collect": "Collect",
@@ -170,6 +184,7 @@
   "Connection with service refused, check if the service is running!": "Connection with service refused, check if the service is running!",
   "Convert all": "Convert all",
   "Could not remove legend SequelizeForeignKeyConstraintError: update or delete on table \"legends\" violates foreign key constraint \"alerts_legend_id_fkey\" on table \"alerts\"": "Could not remove legend: the legend is being used by an alert.",
+  "Could not remove project with data provider associated": "Could not remove project with data provider associated",
   "Could not save data provider due: name must be unique;  name: name must be unique": "Could not save data provider due: name must be unique;  name: name must be unique",
   "Could not save data provider due: project_id must be unique; name must be unique;  project_id: project_id must be unique,\nname: name must be unique": "Could not save data provider due: name must be unique.",
   "Could not save data series due:  name: name must be unique": "Could not save data series due: name must be unique",
@@ -210,6 +225,7 @@
   "Data Series": "Data Series",
   "Data Series Name": "Data Series Name",
   "Data Series Registration": "Data Series Registration",
+  "Data Series import": "Data Series import",
   "Data Series is required": "Data Series is required",
   "Data Server": "Data Server",
   "Data Server Description": "Data Server Description",
@@ -265,6 +281,8 @@
   "Date (local time)": "Date (local time)",
   "Date Time": "Date Time",
   "Days": "Days",
+  "Dcp": "Dcp",
+  "Dcp Data Series": "Dcp Data Series",
   "Default": "Default",
   "Default Level Name": "Default Level Name",
   "Default type": "Default type",
@@ -292,6 +310,7 @@
   "Email Server": "Email Server",
   "Email Server Connection": "Email Server Connection",
   "Email Server Test": "Email Server Test",
+  "Email server error": "Email server error: ",
   "Email successfully sent": "Email successfully sent",
   "Emails": "Emails",
   "Encoding": "Encoding",
@@ -305,6 +324,7 @@
   "Enviroment Variables": "Enviroment Variables",
   "Error: Error occurred during the service startup. Error: Error: exit code 127": "Error: Error occurred during the service startup. Service executable not found.",
   "Error: Status Timeout exceeded.": "Error: Status Timeout exceeded.",
+  "Error: The port number is busy, port ": "Error: The port number is busy, port ",
   "Error in connection, check the host and the port": "Error in connection, check the host and the port",
   "Error in PostGIS connection: Invalid host": "Error in PostGIS connection: Invalid host",
   "Error creating Alert. \nCould not save legend due SequelizeUniqueConstraintError: Validation error": "Error creating Alert. Could not save legend due: name must be unique.",
@@ -313,7 +333,8 @@
   "Export": "Export",
   "Failed to connect, verify the connection parameters": "Failed to connect, verify the connection parameters",
   "Failed to connect, verify the connection parameters. Important! Make sure the server's REST API is enabled": "Failed to connect, verify the connection parameters. Important! Make sure the server's REST API is enabled",
-  "Failed to create destination folder!": "Failed to create destination folder!",  
+  "Failed to create destination folder!": "Failed to create destination folder!",
+  "Features table (PostgreSQL/PostGIS)": "Features table (PostgreSQL/PostGIS)",
   "Fields": "Fields",
   "FILE": "FILE",
   "File": "File",
@@ -367,9 +388,11 @@
   "GeoTIFF grid": "GeoTIFF grid",
   "GeoTIFF imported with success!": "GeoTIFF imported with success!",
   "Geometric Object": "Geometric Object",
+  "Geometry property": "Geometry property",
   "GrADS": "GrADS",
   "Grid": "Grid",
   "Grid Data Series": "Grid Data Series",
+  "Grid Files (GeoTIFF)": "Grid Files (GeoTIFF)",
   "Grid analysis script must end with 'return' statement": "Grid analysis script must end with 'return' statement",
   "Grid configuration": "Grid configuration",
   "Grid operators": "Grid operators",
@@ -388,6 +411,7 @@
   "Host Address is required": "Host Address is required",
   "Host connection": "Host connection",
   "Host not found": "Host not found",
+  "Host service error": "Host service error: ",
   "Hours": "Hours",
   "HTTP": "HTTP",
   "HTTPS": "HTTPS",
@@ -396,6 +420,18 @@
   "INPE's DCP data format": "INPE's DCP data format",
   "INPE's Wildland Fire Program": "INPE's Wildland Fire Program",
   "INTERVAL": "INTERVAL",
+  "If service is not running you can not save the alert": {
+    " Start the service before create or update an alert!": "If service is not running you can not save the alert. Start the service before create or update an alert!"
+  },
+  "If service is not running you can not save the analysis": {
+    " Start the service before create or update an analysis!": "If service is not running you can not save the analysis. Start the service before create or update an analysis!"
+  },
+  "If service is not running you can not save the data series": {
+    " Start the service before create or update a data series!": "If service is not running you can not save the data series. Start the service before create or update a data series!"
+  },
+  "If service is not running you can not save the view": {
+    " Start the service before create or update a view!": "If service is not running you can not save the view. Start the service before create or update a view!"
+  },
   "Ignores all data GREATER than": "Ignores all data GREATER than",
   "Ignores all data LESS than": "Ignores all data LESS than",
   "Ignores data after": "Ignores data after",
@@ -409,6 +445,8 @@
   "Import": "Import",
   "Import CSV": "Import CSV",
   "Import Shapefile": "Import Shapefile",
+  "Import data": "Import data",
+  "Import data series": "Import data series",
   "Import process executed with success": "Import process executed with success",
   "Import process executed with success, but there were duplicated Alias, check the values": "Import process executed with success, but there were duplicated Alias, check the values",
   "Important!": "Important!",
@@ -442,9 +480,12 @@
   "Interpolation dummy value": "Interpolation dummy value",
   "Interpolation method is required": "Interpolation method is required",
   "Intersection": "Intersection",
+  "Invalid address": "Invalid address",
   "Invalid alias": "Invalid alias",
+  "Invalid column name": "Invalid column name",
   "Invalid configuration for the TerraMA² data directory": "Invalid configuration for the TerraMA² data directory",
   "Invalid data provider path!": "Invalid data provider path!",
+  "Invalid file extension!": "Invalid file extension!",
   "Invalid file name!": "Invalid file name!",
   "Invalid folder": "Invalid folder",
   "Invalid format": "Invalid format",
@@ -456,6 +497,7 @@
   "Invalid range of ports": {
     " A valid port is from 1 to 65535": "Invalid range of ports. A valid port is from 1 to 65535"
   },
+  "Invalid table name": "Invalid table name",
   "Invalid value": "Invalid value",
   "Invalid value for the field": "Invalid value for the field",
   "It performs Analysis Validation in order to check if it will able to generate a valid data series": "It performs Analysis Validation in order to check if it will able to generate a valid data series",
@@ -497,6 +539,7 @@
   "Local Service": "Local Service",
   "Log": "Log",
   "Log Configuration": "Log Configuration",
+  "Log database error": "Log database error: ",
   "Log database name": "Log database name",
   "Log host is required": "Log host is required",
   "Log hostname": "Log hostname",
@@ -511,6 +554,7 @@
   "Main Navigation": "Main Navigation",
   "Manual": "Manual",
   "Map Display": "Map Display",
+  "Map server error": "Map server error: ",
   "Maps Server Connection": "Maps Server Connection",
   "Maps Server Parameters": "Maps Server Parameters",
   "Maps Server URI": "Maps Server URI",
@@ -596,6 +640,7 @@
   "OGR static data file": "OGR static data file",
   "OK": "OK",
   "Object Monitored": "Object Monitored",
+  "Object Monitored Data Series": "Object Monitored Data Series",
   "Obs": " enter the addresses separated by semicolons",
   "Obs: enter the addresses separated by semicolons": "Obs: enter the addresses separated by semicolons",
   "Occurrence": "Occurrence",
@@ -615,6 +660,7 @@
   "Output format is required": "Output format is required",
   "PCD": "PCD",
   "PCD Data Registration": "PCD Data Registration",
+  "POSTGIS": "POSTGIS",
   "Parameters": "Parameters",
   "Password": "Password",
   "Password did not match for the confirmation password": "Password did not match for the confirmation password",
@@ -622,6 +668,7 @@
   "Path": "Path",
   "Path is required": "Path is required",
   "Path to script": "Path to script",
+  "Permission": "Permission",
   "Permission denied": "Permission denied",
   "Please fill at least a add_value() in script field": {
     "": "Please fill at least a add_value() in script field."
@@ -632,13 +679,13 @@
   "Polygon Stroke Width": "Polygon Stroke Width",
   "Polygon Stroke Width is required for View data series": "Polygon Stroke Width is required for View data series",
   "Port": "Port",
+  "Port error": "Port error: ",
   "Port is invalid": "Port is invalid",
   "Port is required": "Port is required",
   "Port is required for": "Port is required for",
   "Port must be a number": "Port must be a number",
   "Port number": "Port number",
-  "Error: The port number is busy, port ": "Error: The port number is busy, port ",
-  "POSTGIS": "POSTGIS",
+  "Protected": "Protected",
   "PostGIS occurrence": "PostGIS occurrence",
   "PostGIS static data": "PostGIS static data",
   "PostGis occurrence": "PostGIS occurrence",
@@ -845,6 +892,8 @@
   "The connection was refused by the server, verify the connection parameters. Important! Make sure the server's REST API is enabled": "The connection was refused by the server, verify the connection parameters. Important! Make sure the server's REST API is enabled",
   "The first line is a header?": "The first line is a header?",
   "The process was started successfully": "The process was started successfully",
+  "The service can not access the log database!": "The service can not access the log database!",
+  "The service can not access the map server!": "The service can not access the map server!",
   "The size limit for the file is 300 MB.": "The size limit for the file is 300 MB.",
   "The values of the levels must be numeric and be in a growing order%2C and the names of the levels must be filled": "The values of the levels must be numeric and be in a growing order%2C and the names of the levels must be filled",
   "The values of the levels must be numeric and be in a growing order, and the names of the levels must be filled": "The values of the levels must be numeric and be in a growing order, and the names of the levels must be filled",
@@ -861,6 +910,7 @@
   "Time unit is required": "Time unit is required",
   "Timeout": " Request took longer than ",
   "Timeout: Request took longer than ": "Timeout: Request took longer than ",
+  "Timestamp property": "Timestamp property",
   "Timezone": "Timezone",
   "Timezone is required": "Timezone is required",
   "Tipo": "Tipo",
@@ -900,6 +950,7 @@
   "User Update": "User Update",
   "User cell phone number": "User cell phone number",
   "User e-mail": "User e-mail",
+  "User is not allowed": "User is not allowed",
   "User is required": "User is required",
   "User name credential": "User name credential",
   "User password": "User password",
@@ -921,6 +972,7 @@
   "Value must be unique": "Value must be unique",
   "Variance": "Variance",
   "Vector": "Vector",
+  "Vector Files (ESRI Shapefile)": "Vector Files (ESRI Shapefile)",
   "Version": "Version",
   "View": "View",
   "View Data Series": "View Data Series",
@@ -942,6 +994,7 @@
   "Weekly": "Weekly",
   "When the value is 0, it will use thread number supported by the server": "When the value is 0, it will use thread number supported by the server",
   "When value is 0, the default will be supported threads by server": "When value is 0, the default will be supported threads by server",
+  "Wild fire event (ESRI Shapefile)": "Wild fire event (ESRI Shapefile)",
   "Wizard mode": "Wizard mode",
   "X": "X",
   "X is invalid number": "X is invalid number",
@@ -960,6 +1013,21 @@
   "Y max is required": "Y max is required",
   "Y min is required": "Y min is required",
   "Yes": "Yes",
+  "You can not edit this alert": {
+    " He belongs to a protected project!": "You can not edit this alert. He belongs to a protected project!"
+  },
+  "You can not edit this analysis": {
+    " He belongs to a protected project!": "You can not edit this analysis. He belongs to a protected project!"
+  },
+  "You can not edit this data series": {
+    " He belongs to a protected project!": "You can not edit this data series. He belongs to a protected project!"
+  },
+  "You can not edit this data server": {
+    " He belongs to a protected project!": "You can not edit this data server. He belongs to a protected project!"
+  },
+  "You can not edit this view": {
+    " He belongs to a protected project!": "You can not edit this view. He belongs to a protected project!"
+  },
   "active": "active",
   "alias": "alias",
   "but the TerraMA² service version is": "but the TerraMA² service version is",
@@ -971,6 +1039,7 @@
   "filtered from": "filtered from",
   "folder": "folder",
   "h": "h",
+  "imported": "imported",
   "in the line": "in the line",
   "is not active": "is not active",
   "km": "km",
@@ -990,68 +1059,5 @@
   "to": "to",
   "total entries": "total entries",
   "updated": "updated",
-  "w": "w",
-  "Invalid address": "Invalid address",
-  "Invalid file extension!": "Invalid file extension!",
-  "The service can not access the log database!": "The service can not access the log database!",
-  "The service can not access the map server!": "The service can not access the map server!",
-  "Host service error": "Host service error: ",
-  "Log database error": "Log database error: ",
-  "Port error": "Port error: ",
-  "Email server error": "Email server error: ",
-  "Map server error": "Map server error: ",
-  "Can not delete the view if the service is not running": {
-    " ": "Can not delete the view if the service is not running. "
-  },
-  "Can not delete the analysis if the service is not running": {
-    " ": "Can not delete the analysis if the service is not running. "
-  },
-  "Can not delete the data series if the service is not running": {
-    " ": "Can not delete the data series if the service is not running. "
-  },
-  "Can not delete the alert if the service is not running": {
-    " ": "Can not delete the alert if the service is not running. "
-  },
-  "If service is not running you can not save the data series": {
-    " Start the service before create or update a data series!": "If service is not running you can not save the data series. Start the service before create or update a data series!"
-  },
-  "If service is not running you can not save the analysis": {
-    " Start the service before create or update an analysis!": "If service is not running you can not save the analysis. Start the service before create or update an analysis!"
-  },
-  "If service is not running you can not save the view": {
-    " Start the service before create or update a view!": "If service is not running you can not save the view. Start the service before create or update a view!"
-  },
-  "If service is not running you can not save the alert": {
-    " Start the service before create or update an alert!": "If service is not running you can not save the alert. Start the service before create or update an alert!"
-  },
-  "Permission": "Permission",
-  "You can not edit this data server": {
-    " He belongs to a protected project!": "You can not edit this data server. He belongs to a protected project!"
-  },
-  "You can not edit this data series": {
-    " He belongs to a protected project!": "You can not edit this data series. He belongs to a protected project!"
-  },
-  "You can not edit this analysis": {
-    " He belongs to a protected project!": "You can not edit this analysis. He belongs to a protected project!"
-  },
-  "You can not edit this view": {
-    " He belongs to a protected project!": "You can not edit this view. He belongs to a protected project!"
-  },
-  "You can not edit this alert": {
-    " He belongs to a protected project!": "You can not edit this alert. He belongs to a protected project!"
-  },
-  "User is not allowed": "User is not allowed",
-  "Protected": "Protected",
-  "Features table (PostgreSQL/PostGIS)": "Features table (PostgreSQL/PostGIS)",
-  "Grid Files (GeoTIFF)": "Grid Files (GeoTIFF)",
-  "Vector Files (ESRI Shapefile)": "Vector Files (ESRI Shapefile)",
-  "Dcp": "Dcp",
-  " Data Series": " Data Series",
-  "Dcp Data Series": "Dcp Data Series",
-  "Object Monitored Data Series": "Object Monitored Data Series",
-  "Import data series": "Import data series",
-  "Choose data series": "Choose data series",
-  "Data Series import": "Data Series import",
-  "imported": "imported",
-  "Import data": "Import data"
+  "w": "w"
 }
