--- a/webmonitor/locales/en.json
+++ b/webmonitor/locales/en.json
@@ -11,12 +11,26 @@
   "Analysis": "Analysis",
   "Animation": "Animation",
   "Animation controls": "Animation controls",
+  "Apply": "Apply",
+  "April": "April",
   "ATTRIBUTES-OF-LAYER-COLON": "Attributes of Layer: ",
+  "August": "August",
+  "Cancel": "Cancel",
   "CAPABILITIES-ERROR": "Error to find capabilities.",
   "Close": "Close",
   "Complete": "Complete",
   "CSV": "CSV",
+  "Custom": "Custom",
+  "DATE-FORMAT": "MM/DD/YYYY",
+  "DAY-SU": "Su",
+  "DAY-MO": "Mo",
+  "DAY-TU": "Tu",
+  "DAY-WE": "We",
+  "DAY-TH": "Th",
+  "DAY-FR": "Fr",
+  "DAY-SA": "Sa",
   "Days": "Days",
+  "December": "December",
   "Description": "Description",
   "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)": "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)",
   "Dynamic Data": "Dynamic Data",
@@ -24,8 +38,10 @@
   "Export Data": "Export Data",
   "Exportation": "Exportation",
   "Externals": "Externals",
+  "February": "February",
   "FILE-NOT-FOUND": "File not found.",
   "First": "First",
+  "From": "From",
   "FROM-COLON": "From:",
   "GeoJSON": "GeoJSON",
   "Hours": "Hours",
@@ -33,6 +49,9 @@
   "INCORRECT-USER": "Incorrect user.",
   "INPE PROJECT": "INPE PROJECT",
   "Invalid URL!": "Invalid URL!",
+  "January": "January",
+  "June": "June",
+  "July": "July",
   "KML": "KML",
   "Last": "Last",
   "Layer Tools": "Layer Tools",
@@ -41,12 +60,16 @@
   "Load State": "Load State",
   "LOADING": "Loading...",
   "Map Server is not responding": "Map Server is not responding",
+  "March": "March",
+  "May": "May",
   "Minutes": "Minutes",
   "Missing credentials": "Missing credentials.",
   "Next": "Next",
   "No data available in table": "No data available in table",
-  "NO-DATA": "No data to show.",
   "No matching records found": "No matching records found",
+  "NO-DATA": "No data to show.",
+  "November": "November",
+  "October": "October",
   "of": "of",
   "Opacity": "Opacity",
   "Password": "Password",
@@ -60,6 +83,7 @@
   "Save changes": "Save changes",
   "Save State": "Save State",
   "SEARCH-COLON": "Search:",
+  "September": "September",
   "Shapefile": "Shapefile",
   "Show": "Show",
   "Showing": "Showing",
@@ -69,10 +93,12 @@
   "Static Data": "Static Data",
   "Templates": "Templates",
   "to": "to",
+  "To": "To",
   "TO-COLON": "To:",
   "total entries)": "total entries)",
   "Username": "Username",
   "Verifying data for export<span>...</span>": "Verifying data for export<span>...</span>",
   "VISIBLE LAYERS": "VISIBLE LAYERS",
+  "WEEK-LABEL": "W",
   "WMS URI": "WMS URI"
 }
