--- a/webmonitor/locales/pt.json
+++ b/webmonitor/locales/pt.json
@@ -11,12 +11,26 @@
   "Analysis": "Análises",
   "Animation": "Animação",
   "Animation controls": "Controles de animação",
+  "Apply": "Aplicar",
+  "April": "Abril",
   "ATTRIBUTES-OF-LAYER-COLON": "Atributos da Camada: ",
+  "August": "Agosto",
+  "Cancel": "Cancelar",
   "CAPABILITIES-ERROR": "Erro ao encontrar o capabilities.",
   "Close": "Fechar",
   "Complete": "Completo",
   "CSV": "CSV",
+  "Custom": "Personalizado",
+  "DATE-FORMAT": "DD/MM/YYYY",
+  "DAY-SU": "Do",
+  "DAY-MO": "Se",
+  "DAY-TU": "Te",
+  "DAY-WE": "Qa",
+  "DAY-TH": "Qi",
+  "DAY-FR": "Sx",
+  "DAY-SA": "Sa",
   "Days": "Dias",
+  "December": "Dezembro",
   "Description": "Descrição",
   "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)": "Plataforma digital para monitoramento e alerta de fogo na vegetação no Cerrado brasileiro (Banco Mundial TF018566)",
   "Dynamic Data": "Dados Dinâmicos",
@@ -24,8 +38,10 @@
   "Export Data": "Exportar Dados",
   "Exportation": "Exportação",
   "Externals": "Externos",
+  "February": "Fevereiro",
   "FILE-NOT-FOUND": "O arquivo não foi encontrado.",
   "First": "Primeira",
+  "From": "De",
   "FROM-COLON": "De:",
   "GeoJSON": "GeoJSON",
   "Hours": "Horas",
@@ -33,6 +49,9 @@
   "INCORRECT-USER": "Usuário incorreto.",
   "INPE PROJECT": "PROJETO INPE",
   "Invalid URL!": "URL Inválida!",
+  "January": "Janeiro",
+  "June": "Junho",
+  "July": "Julho",
   "KML": "KML",
   "Last": "Última",
   "Layer Tools": "Ferramentas da Camada",
@@ -41,12 +60,16 @@
   "Load State": "Carregar Estado",
   "LOADING": "Carregando...",
   "Map Server is not responding": "O servidor de mapas não está respondendo",
+  "March": "Março",
+  "May": "Maio",
   "Minutes": "Minutos",
   "Missing credentials": "Usuário e/ou senha não inseridos.",
   "Next": "Próxima",
   "No data available in table": "Nenhum registro a ser exibido",
-  "NO-DATA": "Não existem dados para exibir.",
   "No matching records found": "Nenhum registro encontrado",
+  "NO-DATA": "Não existem dados para exibir.",
+  "November": "Novembro",
+  "October": "Outubro",
   "of": "de",
   "Opacity": "Opacidade",
   "Password": "Senha",
@@ -60,6 +83,7 @@
   "Save changes": "Salvar alterações",
   "Save State": "Salvar Estado",
   "SEARCH-COLON": "Pesquisa:",
+  "September": "Setembro",
   "Shapefile": "Shapefile",
   "Show": "Exibir",
   "Showing": "Exibindo",
@@ -69,10 +93,12 @@
   "Static Data": "Dados Estáticos",
   "Templates": "Planos de Fundo",
   "to": "até",
+  "To": "Até",
   "TO-COLON": "Até:",
   "total entries)": "registros)",
   "Username": "Usuário",
   "Verifying data for export<span>...</span>": "Verificando dados para exportação<span>...</span>",
   "VISIBLE LAYERS": "CAMADAS VISÍVEIS",
+  "WEEK-LABEL": "S",
   "WMS URI": "WMS URI"
 }
