Locales to auto legend button

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -117,6 +117,7 @@
   "Attributes": "Attributes",
   "Attributes to be Converted": "Attributes to be Converted",
   "Author": "Author",
+  "Auto Legend": "Auto Legend",
   "Automatic": "Automatic",
   "Average": "Average",
   "Band": "Band",
