--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -118,6 +118,7 @@
   "Attributes": "Atributos",
   "Attributes to be Converted": "Atributos a Serem Convertidos",
   "Author": "Autor",
+  "Auto Legend": "Legenda automática",
   "Automatic": "Automático",
   "Average": "Média",
   "Band": "Banda",
