Fix json styles to resolve one band data series

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -301,6 +301,7 @@
   "Dynamic Data Registration": "Dynamic Data Registration",
   "Dynamic Data Series": "Dynamic Data Series",
   "E-mail": "E-mail",
+  "East band": "East band",
   "Edit": "Edit",
   "Editor": "Editor",
   "Email": "Email",
@@ -404,6 +405,7 @@
   "Grid - GrADS": "Grid - GrADS",
   "Grid - Grib2": "Grid - Grib2",
   "Grid - HDF5": "Grid - HDF5",
+  "Has one band": "Has one band",
   "Header size": "Header size",
   "Helpers": "Helpers",
   "Historical operators": "Historical operators",
@@ -623,6 +625,7 @@
   "No view service found": "No view service found",
   "Nome": "Nome",
   "None": "None",
+  "North band": "North band",
   "Note": " No storager configuration, this data will be accessed when needed.",
   "Note: No storager configuration, this data will be accessed when needed.": "Note: No storager configuration, this data will be accessed when needed.",
   "Notification": "Notification",
