--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -105,14 +105,14 @@
   "Area of interest for notification": "Área de interesse para notificação",
   "Area of interest is required": "Área de interesse é requerida",
   "Array items are not unique": "Os itens do array não são únicos",
-	"Attach Views": "Anexar Visualizações",
+  "Attach Views": "Anexar Visualizações",
   "Attribute": "Atributo",
   "Attribute    ": "Atributo    ",
   "Attribute Identifier": "Atributo Identificador",
   "Attribute Identifier is required": "Atributo Identificador é obrigatório",
   "Attribute Name": "Nome do Atributo",
   "Attribute PCD": "Atributo da PCD",
-	"Attribute is required": "Atributo é obrigatório",
+  "Attribute is required": "Atributo é obrigatório",
   "Attribute name cannot be same": "Nome do atributo não pode ser igual",
   "Attribute name is required": "Nome do atributo é requerido",
   "Attributes": "Atributos",
@@ -187,7 +187,7 @@
   "Connection with service refused, check if the service is running!": "Conexão com o serviço recusada, verifique se o mesmo está em execução!",
   "Convert all": "Converter todos",
   "Could not remove legend SequelizeForeignKeyConstraintError: update or delete on table \"legends\" violates foreign key constraint \"alerts_legend_id_fkey\" on table \"alerts\"": "Não foi possível remover a legenda: a legenda está sendo usada por um alerta.",
-	"Could not remove project with data provider associated": "Could not remove project with data provider associated",
+  "Could not remove project with data provider associated": "Could not remove project with data provider associated",
   "Could not save data provider due: name must be unique;  name: name must be unique": "Não foi possível salvar o servidor de dados, já existe um registro com o nome inserido, e o nome deve ser único.",
   "Could not save data provider due: project_id must be unique; name must be unique;  project_id: project_id must be unique,\nname: name must be unique": "Não foi possível salvar o servidor de dados, já existe um registro com o nome inserido, e o nome deve ser único.",
   "Could not save data series due:  name: name must be unique": "Não foi possível salvar a série de dados, já existe um registro com o nome inserido, e o nome deve ser único.",
@@ -303,6 +303,7 @@
   "Dynamic Data Registration": "Registro de Dado Dinâmico",
   "Dynamic Data Series": "Séries de Dados Dinâmicos",
   "E-mail": "E-mail",
+  "East band": "Banda leste",
   "Edit": "Editar",
   "Editor": "Editor",
   "Email": "Email",
@@ -313,7 +314,7 @@
   "Email Server": "Servidor de Email",
   "Email Server Connection": "Conexão com o Servidor de Email",
   "Email Server Test": "Teste de Servidor de Email",
-	"Email server error": "Erro no servidor de email: ",
+  "Email server error": "Erro no servidor de email: ",
   "Email successfully sent": "Email enviado com sucesso",
   "Emails": "Emails",
   "Encoding": "Codificação",
@@ -390,7 +391,7 @@
   "GeoTIFF grid": "Grade GeoTIFF",
   "GeoTIFF imported with success!": "GeoTIFF importado com sucesso!",
   "Geometric Object": "Objeto Geométrico",
-	"Geometry property": "Propriedade geométrica",
+  "Geometry property": "Propriedade geométrica",
   "GrADS": "Formato GrADS",
   "Grid": "Grade",
   "Grid Data Series": "Série de Dados Matricial",
@@ -406,6 +407,7 @@
   "Grid - GrADS": "Matriz - GrADS",
   "Grid - Grib2": "Matriz - Grib2",
   "Grid - HDF5": "Matriz - HDF5",
+  "Has one band": "Única banda",
   "Header size": "Tamanho do cabeçalho",
   "Helpers": "Auxiliares",
   "Historical operators": "Operadores históricos",
@@ -446,7 +448,7 @@
   "Ignores previous data to": "Ignorar dados anteriores a",
   "Image Generate": "Geração de Imagem",
   "Import": "Importar",
-	"Import data": "Dados de importação",
+  "Import data": "Dados de importação",
   "Import data series": "Importar série de dados",
   "Import Shapefile": "Importar Shapefile",
   "Import CSV": "Importar CSV",
@@ -485,7 +487,7 @@
   "Intersection": "Interseção",
   "Invalid address": "Endereço inválido",
   "Invalid alias": "Pseudônimo inválido",
-	"Invalid column name": "Nome da coluna inválido",
+  "Invalid column name": "Nome da coluna inválido",
   "Invalid configuration for the TerraMA² data directory": "A atual configuração do diretório de dados do TerraMA² é inválida",
   "Invalid data provider path!": "O caminho do Servidor de Dados é inválido!",
   "Invalid file extension!": "Extensão inválida!",
@@ -553,7 +555,7 @@
   "Local Service": "Serviço local",
   "Log": "Log",
   "Log Configuration": "Configuração do Log",
-	"Log database error": "Erro no banco de dados de log: ",
+  "Log database error": "Erro no banco de dados de log: ",
   "Log database name": "Nome da Base de Dados",
   "Log host is required": "O preenchimento do endereço é obrigatório",
   "Log hostname": "Endereço",
@@ -568,7 +570,7 @@
   "Main Navigation": "Navegação Principal",
   "Manual": "Manual",
   "Map Display": "Tela do Mapa",
-	"Map server error": "Erro no servidor de mapas: ",
+  "Map server error": "Erro no servidor de mapas: ",
   "Maps Server Connection": "Conexão com o Servidor de Mapas",
   "Maps Server Parameters": "Parâmetros do servidor de mapas",
   "Maps Server URI": "URI do servidor de mapas",
@@ -651,6 +653,7 @@
   "Number of Threads": "Número de Threads",
   "Number of threads is invalid": "Número de threads inválido",
   "Number of threads is required": "O preenchimento do número de threads é obrigatório",
+  "North band": "Banda norte",
   "OGR static data file": "Arquivo estático OGR",
   "OK": "OK",
   "Object Monitored": "Objeto Monitorado",
@@ -692,7 +695,7 @@
   "Polygon Stroke Width": "Largura do polígono",
   "Polygon Stroke Width is required for View data series": "Largura do polígono é obrigatório para visualição da série de dados",
   "Port": "Porta",
-	"Port error": "Erro na porta: ",
+  "Port error": "Erro na porta: ",
   "Port is invalid": "Porta inválida",
   "Port is required": "O preenchimento da porta é obrigatório",
   "Port is required for": "Porta é requerida para",
@@ -754,7 +757,7 @@
   "Resolution Y": "Resolução Y",
   "Resolution is required": "Resolução é requerida",
   "Run": "Executar",
-	"SLD": "SLD",
+  "SLD": "SLD",
   "SRID": "SRID",
   "SRID is invalid": "SRID é inválido",
   "SRID is required": "SRID é requerido",
@@ -775,7 +778,7 @@
   "Search": "Pesquisa",
   "Seconds": "Segundos",
   "Select": "Selecionar",
-	"Select a Project": "Selecione um Projeto",
+  "Select a Project": "Selecione um Projeto",
   "Select Area of Interest": "Selecione Área de Interesse",
   "Select Attibutes": "Selecione atributos",
   "Select Attributes": "Selecione atributos",
@@ -915,7 +918,7 @@
   "Time unit is required": "Unidade de tempo é requerido",
   "Timeout": " A requisição demorou mais que ",
   "Timeout: Request took longer than ": "Tempo Limite do Servidor de Dados: A requisição demorou mais que ",
-	"Timestamp property": "Propriedade de tempo",
+  "Timestamp property": "Propriedade de tempo",
   "Timezone": "Fuso horário",
   "Timezone is required": "Fuso horário é requerido",
   "Tipo": "Tipo",
@@ -999,7 +1002,7 @@
   "Weekly": "Semanalmente",
   "When the value is 0, it will use thread number supported by the server": "Quando o valor for 0, será utilizado o número de threads suportado pelo servidor",
   "When value is 0, the default will be supported threads by server": "Quando o valor é 0, o padrão de threads será definido pelo servidor",
-	"Wild fire event (ESRI Shapefile)": "Evento de queimada (ESRI Shapefile)",
+  "Wild fire event (ESRI Shapefile)": "Evento de queimada (ESRI Shapefile)",
   "Wizard mode": "Modo assistente",
   "X": "X",
   "X is invalid number": "X é um número inválido",
